M48: sequence numbers that survive a failover, and the conditional writes built on them
M47's notes claimed this shell "has no version model at all". That was
wrong in an instructive way, and finding out how wrong is what made
this milestone tractable. Core's own engine had been assigning
_seq_no, _primary_term and _version on every write all along, and
BackgroundReconciler has depended on the sequence number for its
publish decision since M10. The field with a hard cluster-manager
dependency in classic OpenSearch -- the primary term -- this design
had already replaced with the shard-head's CAS generation, which is
exactly the monotonic fencing token core requires.

The real gap was narrower and sharper: WalRecord stored only an id
and a source, so a successor re-applied every record as a fresh
primary operation and the engine minted new sequence numbers. The
numbers were meaningless across a failover, which is why conditional
writes were refused rather than merely unimplemented.

Three things the obvious fix could not do:

- "Add seqNo to WalRecord" does not work as stated. The log was
  appended BEFORE the engine ran, so the number did not exist yet.
  The write path is now apply -> log -> acknowledge, which preserves
  the stated durability contract (the log wins before the ack) and is
  the order classic OpenSearch uses internally. The one window this
  opens is handled rather than accepted: if the log append fails after
  the engine applied, the shard is released, because reporting failure
  while leaving the operation in a shard that will later publish would
  make the refusal a lie.

- Replay could not stay in ShardReconciler. Core accepts a
  caller-supplied sequence number only under a recovery origin, and
  only while the shard is RECOVERING -- a window that closes before
  the reconciler regains control. ServerlessWriterEngine overrides
  core's own Engine#engineRecoveryOperations() seam, whose javadoc
  describes exactly this case including the fencing o